syntax = "proto3";
package thesixnetwork.sixnft.nftmngr.v080;


import "nftmngr/v080/on_chain_data.proto";
import "nftmngr/v080/origin_data.proto";

option go_package = "github.com/thesixnetwork/sixnft/x/nftmngr/types/v080";

message NFTSchema {
  string code = 1; 
  string name = 2; 
  string owner = 3; 
  repeated string system_actioners = 4;
  OriginData origin_data = 5;
  OnChainData onchain_data = 6;
  bool isVerified = 7;
  string mint_authorization = 8;
}
